--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "reselect": "^4.0.0",
     "sass": "^1.38.2",
     "styled-components": "^5.3.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
