--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
+    "mongoose": "^6.0.5",
     "stripe": "6.28.0"
   },
   "devDependencies": {
