--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e-commerce-demo-server",
   "version": "1.0.0",
   "engines": {
-    "node": "14.17.2",
+    "node": "18.12.1",
     "npm": "6.14.13"
   },
   "scripts": {
@@ -10,8 +10,7 @@
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "start": "node server.js"
   },
   "dependencies": {
     "all": "^0.0.0",
@@ -19,6 +18,7 @@
     "compression": "1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
+    "mongodb": "^6.2.0",
     "mongoose": "^6.0.5",
     "stripe": "6.28.0"
   },
